cluster/mosquitto/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mosquitto
  namespace: mosquitto
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: mosquitto
  template:
    metadata:
      labels:
        app: mosquitto
    spec:
      containers:
      - name: app
        # https://hub.docker.com/_/eclipse-mosquitto
        image: eclipse-mosquitto:2.0.18-openssl
        imagePullPolicy: IfNotPresent
        ports:
          - name: tcp-mqtt
            containerPort: 1883
          # - name: tcp-mqtts
          #   containerPort: 8883
          - name: tcp-ws
            containerPort: 9001
        volumeMounts:
          - mountPath: /mosquitto/config/
            name: config
          - mountPath: /mosquitto/data/
            name: data
          # - mountPath: /mosquitto/certs/
          #   name: certs
        resources:
          limits:
            cpu: 2
            memory: 2Gi
          requests:
            cpu: 100m
            memory: 512Mi
        securityContext:
          allowPrivilegeEscalation: false
          runAsNonRoot: false
          capabilities:
          #  drop:
          #    - ALL
          seccompProfile:
            type: RuntimeDefault
      restartPolicy: Always
      volumes:
        - name: config
          configMap:
            name: mosquitto-config
        # - name: certs
        #   secret:
        #     secretName: mosquitto-certs
        - name: data
          persistentVolumeClaim:
            claimName: mosquitto-data
