cluster/mosquitto/services.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: mosquitto-mqtt
  namespace: mosquitto
  annotations:
    metallb.universe.tf/loadBalancerIPs: 10.30.200.2
    metallb.universe.tf/allow-shared-ip: mosquitto
spec:
  type: LoadBalancer
  selector:
    app: mosquitto
  ports:
    - name: tcp-mqtt
      port: 1883
---
apiVersion: v1
kind: Service
metadata:
  name: mosquitto-mqtts
  namespace: mosquitto
  annotations:
    # metallb.universe.tf/loadBalancerIPs: 10.30.200.2
    # metallb.universe.tf/allow-shared-ip: mosquitto
spec:
  # type: NodePort
  selector:
    app: mosquitto
  ports:
    - name: tcp-mqtts
      port: 8883
      # nodePort: 30883
---
apiVersion: v1
kind: Service
metadata:
  name: mosquitto-ws
  namespace: mosquitto
  annotations:
    # metallb.universe.tf/loadBalancerIPs: 10.30.200.2
    # metallb.universe.tf/allow-shared-ip: mosquitto
spec:
  type: ClusterIP
  selector:
    app: mosquitto
  ports:
    - name: tcp-ws
      port: 9001
