cluster/mosquitto/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: mosquitto
  annotations:
    # TODO: cert-manager.io/cluster-issuer: letsencrypt
spec:
  ingressClassName: nginx
  # tls:
  #   - hosts:
  #       - mqtt.example.com
  #     secretName: mosquitto-certs
  rules:
    # TODO: Expose TCP ports for MQTT and MQTTS
    - host: mqtt.fritz.box
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: mosquitto-ws
                port:
                  number: 8883
